--- a/services.yml
+++ b/services.yml
@@ -16,6 +16,7 @@ spec:
         run: data-platform-api-storage-bin-reads-rmq-kube
         app: STORAGE_BIN
     spec:
+      nodeName: worker
       hostname: data-platform-api-storage-bin-reads-rmq-kube
       containers:
         - name: data-platform-api-storage-bin-reads-rmq-kube
